# highlight-it

./: README.md  pyproject.toml
src/highlight_it/: __init__.py  index.py
tests/: test_index.py
tests/data/: test.html  test.md
