[build-system]
requires = ["setuptools >= 78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "highlight_it"
version = "0.1.0"
authors = [ { name="Elijah Greenstein" } ]
description = "Markdown-It-Py plugin extension to configure syntax highlighting."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
  "markdown-it-py>=2.2.0",
  "pygments>=2.19.1",
]

[project.urls]
Homepage = "https://github.com/elijahgreenstein/highlight-it"

[project.optional-dependencies]
testing = [
  "pytest",
]
